Modify CSS to avoid vertical scrollbar

--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@
     font-size: 14pt;
 }
 
+body {
+    display: flex;
+    justify-content:flex-start;
+    flex-wrap: wrap;
+    gap: 40px;
+    margin: 32px;
+}
+
 input {
     background-color: #10101a;
 }
